@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-27T08:23:58Z",
-  "count_outdated" : 2104,
-  "uniques_outdated" : 399,
-  "count" : 2142,
+  "timestamp" : "2022-05-28T01:37:57Z",
+  "count_outdated" : 2106,
+  "uniques_outdated" : 400,
+  "count" : 2143,
   "uniques" : 423,
   "clones" : [
-    {
-      "timestamp": "2022-05-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-14T00:00:00Z",
       "count": 4,
